--- a/view/frontend/web/css/styles.css
+++ b/view/frontend/web/css/styles.css
@@ -10,7 +10,14 @@
     text-align: center;
     min-height: 40px;
     font-size: 14px;
-    padding-top: 10px;
+    padding-top: 0px;
+    justify-content: center;
+    display: flex;
+    align-items: center;
+}
+
+.sticky-notification-bar .content p {
+    margin-bottom: 0;
 }
 
 @media only screen and (max-width: 768px) {
