--- a/view/adminhtml/templates/system/config/preview.phtml
+++ b/view/adminhtml/templates/system/config/preview.phtml
@@ -6,8 +6,12 @@
  */
 /** @var $block \Fyb\NotificationBar\Block\Adminhtml\System\Config\PreviewPromo */
 ?>
-<button id="preview-promo-box" type="button" style="margin-top: 15px; width: 150px;">Preview</button>
-<div class="preview-container" style="margin-top: 20px;" id="preview-container">
+<div class="section-config" style="margin-top: 10px;">
+    <div class="entry-edit-head admin__collapsible-block">
+        <span style="font-size: 20px">Preview</span>
+    </div>
+    <div class="preview-container" style="margin-top: 20px;" id="preview-container">
+    </div>
 </div>
 
 <script>
@@ -24,7 +28,7 @@
                 'color: ' + $('#notification_bar_general_text_color').val() + ';" >' +
                 '<div class="content" style="min-height: ' + $('#notification_bar_general_min_height').val()  + 'px;">' +
                 $('#notification_bar_general_content').val() + '</div>' +
-            '</div>';
+                '</div>';
 
             iframe.id = idIframe;
             document.getElementById("preview-container").appendChild(iframe);
@@ -44,7 +48,7 @@
             $(head).append(css);
         }
 
-        $('#preview-promo-box').on('click', function () {
+        $(document).ready(function() {
             prepareFrame();
         });
 
